@@ -1,5 +1,9 @@
 # version 0.67.1
 
+2022-05-12
+ - Implemented mapping of LDAP username to email
+
+
 # version 0.67
 
 2022-05-09
@@ -7,6 +11,7 @@
  - An embedded LDAP server can now be started automatically if configured accordingly.
 2022-05-11
  - Changed the SQL script updating oauth2_client table
+
 
 # version 0.66
 
